<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="15dp"
    android:paddingEnd="12dp"
    tools:context="com.aplicacion2.appenergia.presentation.ui.MainActivityFiltroFactura">

    <View
        android:id="@+id/lineDivider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="108dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvPorImporte"
        android:layout_width="116dp"
        android:layout_height="26dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/por_un_importe"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineDivider1" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:max="300"
        android:padding="10dp"
        android:progress="150"
        android:progressDrawable="@drawable/custom_seekbar"
        android:splitTrack="false"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintBottom_toTopOf="@+id/llEstados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lineDivider1"
        app:layout_constraintVertical_bias="0.595" />
    <TextView
        android:id="@+id/tvMinImporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:text="@string/_0"
        android:textColor="#8C8686"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPorImporte"
        app:layout_constraintVertical_bias="0.151" />

    <TextView
        android:id="@+id/tvMaxImporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        android:text="@string/_300"
        android:textColor="#8C8686"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lineDivider1" />
    <View
        android:id="@+id/lineDivider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="88dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMaxImporte" />
    <TextView
        android:id="@+id/tvPorEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/por_estado"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/llEstados"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineDivider2"
        app:layout_constraintVertical_bias="0.28" />
    <LinearLayout
        android:id="@+id/llEstados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lineDivider2">
        <CheckBox
            android:id="@+id/chkPagadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/darker_gray"
            android:text="@string/pagadas" />
        <CheckBox
            android:id="@+id/chkAnuladas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/darker_gray"
            android:text="@string/anuladas" />
        <CheckBox
            android:id="@+id/chkCuotaFija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/darker_gray"
            android:text="@string/cuota_fija" />
        <CheckBox
            android:id="@+id/chkPendientesPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/darker_gray"
            android:text="@string/pendientes_de_pago" />
        <CheckBox
            android:id="@+id/chkPlanPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/darker_gray"
            android:text="@string/plan_de_pago" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtrar_facturas"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="48dp"
        android:text="@string/hasta"
        android:textColor="#8C8686"
        android:textColorLink="#4A4A4A"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/desde"
        android:textColor="#8C8686"
        app:layout_constraintBottom_toTopOf="@+id/lineDivider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/con_fecha_de_emisi_n"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/aplicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llEstados" />

    <Button
        android:id="@+id/button3"
        android:layout_width="197dp"
        android:layout_height="49dp"
        android:backgroundTint="#D7D1D1"
        android:text="@string/eliminar_filtros"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#878282"
        android:text="@string/_150"
        android:textColor="#8BC34A"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/lineDivider2"
        app:layout_constraintEnd_toEndOf="@+id/tvMaxImporte"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/tvMinImporte"
        app:layout_constraintTop_toTopOf="@+id/lineDivider1"
        app:layout_constraintVertical_bias="0.409" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDesde"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:backgroundTint="#D7D1D1"
        android:text="@string/day_month_year"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lineDivider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.461" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonHasta"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#D7D1D1"
        android:text="@string/day_month_year"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lineDivider1"
        app:layout_constraintStart_toEndOf="@+id/buttonDesde"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imClose"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close_icon_description"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/drawable_icon_close" />
</androidx.constraintlayout.widget.ConstraintLayout>