<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- Título del popup -->
    <TextView
        android:id="@+id/tvinformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/informaci_n"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Mensaje del popup -->
    <TextView
        android:id="@+id/tvMensajeContenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/esta_funcionalidad_a_n_no_est_disponible"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <!-- Botón de aceptar -->
    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#8BC34A"
        android:text="@string/cerrar"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>