<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aplicacion2.appenergia.samartsolar.MainActivitySmartSolar">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="167dp"
        android:layout_height="61dp"
        android:layout_marginStart="28dp"
        android:text="@string/smart_solar"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="12dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/flContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/blackDos">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_instalaci_n" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energ_a" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalles" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/flContainer"
        android:layout_width="398dp"
        android:layout_height="667dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ibAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="292dp"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/baseline_chevron_left_24"
        android:drawableTint="@color/green"
        android:text="@string/atr_s"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:tint="@color/green" />


</androidx.constraintlayout.widget.ConstraintLayout>