<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="12dp"
    android:paddingEnd="0dp"
    tools:context="com.aplicacion2.appenergia.presentation.ui.MainActivityFactura">


    <TextView
        android:id="@+id/ibAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="0dp"
        android:focusable="true"
        android:paddingTop="14dp"
        android:paddingBottom="0dp"
        android:text="@string/atr_s"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:drawableLeftCompat="@drawable/baseline_chevron_left_24"
        app:drawableTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtFacturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingStart="0dp"
        android:paddingBottom="12dp"
        android:text="@string/facturas"
        android:textSize="39sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibAtras" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/filtro"
        android:src="@drawable/filtericon_3x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFacturas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingTop="16dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFacturas" />

    <!-- Texto informativo para cuando no haya facturas -->
    <TextView
        android:id="@+id/tvNoFacturas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/no_hay_facturas_disponibles"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/rvFacturas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFacturas" />

</androidx.constraintlayout.widget.ConstraintLayout>

