<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aplicacion2.appenergia.samartsolar.fragments.InstalacionFragment">

    <!-- Frase de descripción -->
    <TextView
        android:id="@+id/tvFrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/aqu_tienes_los_datos_de_la_instalaci_n_fotovoltaica_en_tiempo_real"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <!-- Texto de autoconsumo con más margen -->
    <TextView
        android:id="@+id/tvAutoconsumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="0dp"
        android:text="@string/autoconsumo"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvFrase"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Porcentaje de autoconsumo alineado al lado del texto anterior -->
    <TextView
        android:id="@+id/tvPorcentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:text="@string/_92"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvFrase"
        app:layout_constraintStart_toEndOf="@id/tvAutoconsumo" />

    <!-- Imagen gráfica centrada -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/grafico1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPorcentaje" />

</androidx.constraintlayout.widget.ConstraintLayout>

